Use css variables to fix dark mode

--- a/themes/hugo-notepadium/assets/css/style.css
+++ b/themes/hugo-notepadium/assets/css/style.css
@@ -63,7 +63,7 @@ table {
 .markdown-body h4,
 .markdown-body h5,
 .markdown-body h6 {
-  color: #303033;
+  color: var(--title-color);
   margin-top: 24px;
   margin-bottom: 20px;
 }
@@ -77,7 +77,7 @@ table {
 .markdown-body blockquote,
 .markdown-body q {
   font-size: 15px;
-  color: #303033;
+  color: var(--title-color);
 }
 
 .markdown-body blockquote {
@@ -161,7 +161,7 @@ table {
 }
 
 .markdown-body table th {
-  color: #303033;
+  color: var(--title-color);
   font-weight: 600;
 }
 
@@ -186,7 +186,7 @@ table {
   width: auto;
   margin: 0;
   padding: 2px 4px;
-  color: #303033;
+  color: var(--title-color);
 }
 
 .markdown-body .MathJax {
@@ -310,6 +310,7 @@ table {
     text-align: center;
     font-size: 20px;
     padding-bottom: 10px;
+    color: var(--title-color);
 }
 
 nav ul {
@@ -319,7 +320,7 @@ nav ul {
 }
 
 nav ul li a{
-  color: #3f4b67;
+  color: var(--site-name-color);
   transition: all 100ms ease-in-out;
   text-decoration: none;
 }
@@ -327,10 +328,10 @@ nav ul li a{
 nav ul li.active > a,
 nav ul li a:hover,
 nav ul li a:focus {
-  color: #06c;
+  color: var(--color-primary);
   text-decoration: none;
   padding-left: 7px;
-  border-left: 2px solid #06c;
+  border-left: 2px solid var(--color-primary);
 }
 
 @media (max-width: 1080px) {
